force-app/main/default/objects/pse__Resource_Change__c/pse__Resource_Change__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ResourceChangeHelp</customHelpPage>
    <description>Resource Change records are automatically created to capture changes and effective dates for attributes that affect utilization calculations.</description>
    <label>Resource Change</label>
    <nameField>
        <displayFormat>RC{YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Resource Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>