force-app/main/default/objects/pse__Resource_Change__c/fields/pse__Old_Is_Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Old_Is_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old Is Resource</label>
    <type>Checkbox</type>
</CustomField>