force-app/main/default/objects/pse__Resource_Change__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Change_Date__c</columns>
    <columns>pse__Old_Work_Calendar__c</columns>
    <columns>pse__New_Work_Calendar__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>pse__New_Utilization_Target__c</columns>
    <columns>pse__New_Is_Resource__c</columns>
    <columns>pse__New_Is_Resource_Active__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>pse__Old_Group__c</columns>
    <columns>pse__New_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>